Top nav page multi-language Adding

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -141,6 +141,7 @@
   "statusMessage": "Statusmeldung",
   "sendMessage": "Nachricht senden",
   "postYourJob": "Veröffentlichen Sie Ihren Job",
+  "postYourJobs": "Stellenangebote veröffentlichen",
   "durationPlaceholder": "Beispiel: 6 Monate",
   "duration": "Dauer",
   "months": "in Monaten",
