--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -133,6 +133,7 @@
   "statusMessage": "Mensaje de estado",
   "sendMessage": "Enviar mensaje",
   "postYourJob": "Publica tu trabajo",
+  "postYourJobs": "Publicar trabajos",
   "durationPlaceholder": "Ej: 6 meses",
   "duration": "Duración",
   "months": "en meses",
