hide the employer calendly option in setting

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -447,7 +447,7 @@
   "country": "INDIEN",
   "name": "Ihr Name",
   "email1": "Ihre E-Mail",
-  "subject": "Telefon",
+  "subject": "Betreff",
   "message": "Ihre Nachricht",
   "send": "Nachricht senden",
   "alert1": "Name ist erforderlich",
