Bug Fixing and adding the calendar view in new module

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -337,7 +337,7 @@
 		"screeningProcess":"Screening Process Title",
 		"inviteURL":"Invite URL (optional)",
 		"inviteLink":"Invite Link",
-		"inviteSettings":"Calendar Settings",
+		"inviteSettings":"Invite Settings",
 		"calender":"Calendar",
 		"calenders":"Calendars",
 		"calenderCustom":"Custom Calendars",
