--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -36,6 +36,7 @@
 		"addResumeTitle":" Resume Tilte",
 		"matches":"Matches",
 		"sendMail":"Send Mail",
+		"send":"Send",
 		"chooseJobs":"Choose Jobs",
 		"profileSetting":"Profile Settings",
 		"show":"Show",
@@ -144,7 +145,11 @@
 		"sapModule":"SAP Module",
 		"knowledgeOnSAP":"Knowledge on other SAP Skills",
 		"couldNotFind":"Could not find your SAP skills",
-		"addNewSkills":"Please Add New SAP Skill"
+		"addNewSkills":"Please Add New SAP Skill",
+		"notificationSetting" : "Notification Setting",
+		"jobLocation" : "Job Location",
+		"workTiming" : "Work Timing",
+		"timing" : "Timing"
 	},
 	"auth":{
 		"findRightPlace":"Find Your Right Place",
@@ -320,6 +325,8 @@
 		"paidSickLeaves": "Paid Sick Leaves"
 	},
 	"common": {
+		"refresh": "Refresh",
+		"print": "Print",
 		"message": "Message",
 		"notifications": "Notifications",
 		"notificationsFrom": "Notification From",
@@ -334,8 +341,16 @@
 		"screeningProcess":"Screening Process Title",
 		"inviteURL":"Invite URL (optional)",
 		"inviteLink":"Invite Link",
-		"inviteSettings":"Calender Settings",
+		"inviteSettings":"Invite Settings",
+		"calender":"Calendar",
+		"calenders":"Calendars",
+		"calenderCustom":"Custom Calendars",
+		"calenderTitle":"Calendar Title",
+		"calenderURL":"Calendar URL",
+		"addCalender":"Add Calendars to view scheduling",
+		"addCalenders":"Add Calendars",
 		"inviteSettingsTitle":"Click here to add the calendly",
+		"inviteSettingsAddCustom":"Click here to add the Other Link",
 		"AddInviteLink":"Add Invite Link",
 		"addResume": "Add Resume"
 	},
@@ -393,6 +408,9 @@
 		"recruiterRegister":"Recruiter Registration "
 	},
 	"user":{
+		"calendar" : "Calendar",
+		"calendlySetting" : "Calendar Setting",
+		"schedule" : "Schedule List",
 		"title":"Looking for a job in SAP?",
 		"title1":"Millions of vacancies and there ",
 		"title2":"is something special waiting for you!",
@@ -462,5 +480,18 @@
 		"alert4" : "Message is Required",
 		"valid" : "Enter the valid email",
 		"exist" : "Email already exist"
+	},
+	"notificationSettingsUser":{
+		"notification1" : "New Job Matches",
+		"notification2" : "Employer Send Mail",
+		"notification3" : "Profile Shortlisted",
+		"notification4" : "Profile Rejected",
+		"notification5" : "Interview Scheduled"
+	},
+	"notificationSettingsEmployer" :{
+		"notification1" : "New User Matches",
+		"notification2" : "New Candidate Applied",
+		"notification3" : "Matching Candidate Responded"
+		
 	}
 }
