Calendly Get events Adding

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -341,7 +341,7 @@
 		"screeningProcess":"Screening Process Title",
 		"inviteURL":"Invite URL (optional)",
 		"inviteLink":"Invite Link",
-		"inviteSettings":"Invite Settings",
+		"inviteSettings":"Calendly Settings",
 		"calender":"Calendar",
 		"calenders":"Calendars",
 		"calenderCustom":"Custom Calendars",
